# ComputerGeometry

./: BasicFun.h  CMakeLists.txt  Point.h  README.md  Vector.h  main
include/: BasicFun.h  Point.h  Utility.h  Vector.h  define.h  gl_display.h  glviewer.h  model.h  myalgorithm.h  window.h
res/: CGUI.ui  Generation_Polygon.tp
res/TestPoints/: ConvexHull.off  ConvexHull4.chf  ConvexHulls.chf  Convexhulls2.chf  Convexhulls3.chf  Generation_Polygon.chf  Generation_Polygon.tp  Intersection2.off2  Intersection_Interval.int
res/UI/: CGUI.ui  MyUI.ui
shader/: points.fs  points.vs  segments.fs  segments.vs
src/: BasicFun.cpp  Utility.cpp  gl_display.cpp  glviewer.cpp  main.cpp  model.cpp  myalgorithm.cpp  window.cpp
